--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --main-color: rgba(51, 51, 51, 0.75);
+  --main-color: white;
   --sub-color: #336699;
   --shadow-color: rgba(51, 51, 51, 0.3);
   --danger-color: #dc3545;
@@ -17,7 +17,6 @@
 }
 
 .App {
-  background: black;
   height: 100vh;
 }
 
