--- a/src/components/BackgroundVideo/BackgroundVideo.css
+++ b/src/components/BackgroundVideo/BackgroundVideo.css
@@ -1,13 +1,13 @@
 .video-container {
-  width: 70%;
-  margin-left: auto;
-  top: auto;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
-  border: 1px solid white;
+  z-index: -1;
 }
 
 .bg-video {
-  width: 100%;
-  background-position: right;
-  background-size: cover;
+  width: 1400px;
+  margin-left: 30%;
 }
