--- a/src/components/GeneralStatsDisplay/GeneralStatsDisplay.css
+++ b/src/components/GeneralStatsDisplay/GeneralStatsDisplay.css
@@ -115,6 +115,29 @@
   margin-left: 0.1em;
 }
 
-.general-stats-display-lbl {
-  font-family: 'Wallpoet', monospace;
+.general-stats {
+  font-size: 1.5rem;
+  width: 50%;
+  height: 100%;
+  border: 1px solid blue;
+  background: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.general-stats-display {
+  width: 320px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0.3rem;
+}
+
+.last-update {
+  margin-top: 2rem;
+  font-size: 0.9rem;
+  width: 276px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
