--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,10 +1,10 @@
 .navbar {
   position: fixed;
-  top: 0;
+  top: 0.3rem;
   width: 100%;
-  height: 3rem;
+  height: 2.3rem;
   z-index: 1;
-  padding: 0 2rem;
+  padding: 0 0.3rem;
 }
 
 .navbar-nav {
@@ -13,6 +13,12 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  padding: 0 1rem;
+}
+
+.active {
+  background: var(--light-grey);
+  border-radius: var(--border-radius);
 }
 
 .nav-title {
@@ -30,8 +36,9 @@
 .arr-ico {
   font-size: 1.5rem;
   margin-left: 0.3rem;
-  margin-top: -0.1rem;
+  margin-right: 0.3rem;
+  margin-top: -0.2rem;
 }
 .nav-link:hover {
-  color: #ff7400;
+  color: var(--hover-yellow);
 }
