--- a/src/components/SVGMap/SVGMap.css
+++ b/src/components/SVGMap/SVGMap.css
@@ -1,3 +1,30 @@
 .svg-map-container {
-  background: rgba(32, 32, 32, 0.7);
+  background: var(--light-grey);
+  width: 620px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 0.3rem;
+  padding: 0.3rem;
+  border-radius: var(--border-radius);
+}
+
+.svg-map {
+  background: var(--dark-grey);
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: var(--border-radius);
+}
+
+.svg-map__location {
+  stroke: white;
+  stroke-width: 1pt;
+  fill: var(--light-grey);
+  transition: 1s;
+}
+
+.svg-map__location:hover {
+  fill: var(--hover-yellow);
+  cursor: pointer;
 }
