--- a/src/components/ResultsColumn/ResultsColumn.css
+++ b/src/components/ResultsColumn/ResultsColumn.css
@@ -1,19 +1,21 @@
 .results-column {
+  width: 221.5px;
   height: 100%;
-  width: 280px;
-  border-radius: var(--border-radius);
   display: flex;
   flex-direction: column;
+  padding-bottom: 0.06rem;
 }
-.last-update-column {
-  margin-top: 0;
+
+.large {
+  height: 92%;
   width: 100%;
-  height: 50px;
+}
+
+.results-container {
+  width: 100%;
+  flex: 1 1 auto;
   background: var(--light-grey);
   border-radius: var(--border-radius);
-
-  font-size: 0.9rem;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  padding: 0.3rem 1rem;
+  margin: 0.1rem 0;
+  overflow-y: scroll;
 }
