--- a/src/components/TotalBlock/TotalBlock.css
+++ b/src/components/TotalBlock/TotalBlock.css
@@ -5,6 +5,11 @@
   border-radius: var(--border-radius);
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  margin-bottom: 0.3rem;
+}
+
+.total-num {
+  filter: brightness(1.8);
+  margin-top: -10px;
 }
