--- a/src/components/TextUnderMouse/TextUnderMouse.css
+++ b/src/components/TextUnderMouse/TextUnderMouse.css
@@ -1,5 +1,9 @@
 .text-under-mouse {
   position: absolute;
-  color: red;
+  color: black;
   top: 0;
+  z-index: 1;
+  background: var(--bright-grey);
+  border-radius: 3px;
+  padding: 0 3px;
 }
