--- a/src/components/SpecificStatBlock/SpecificStatBlock.css
+++ b/src/components/SpecificStatBlock/SpecificStatBlock.css
@@ -1,11 +1,19 @@
 .specific-stat-block {
   background: var(--light-grey);
   border-radius: 0.3rem;
-  border-left: 5px solid blue;
-  font-size: 1.1rem;
+  padding: 0.4rem 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .specific-stat-label {
-  color: blue;
+  font-size: 1.1rem;
+  font-weight: 500;
+  filter: brightness(1.8);
+}
+
+.specific-stat-number {
+  color: white;
+  font-size: 1.5rem;
   font-weight: 600;
 }
