finished statspage state control and functionality, pending graphs and sort stats from higher to lower

--- a/src/components/ResultBlock/ResultBlock.css
+++ b/src/components/ResultBlock/ResultBlock.css
@@ -5,6 +5,10 @@
   transition: 0.5s;
 }
 
+.active-block {
+  background: var(--bright-grey-opac);
+}
+
 .result-block:hover {
   cursor: pointer;
   background: var(--bright-grey-opac);
