--- a/src/components/GeneralStatsDisplay/GeneralStatsDisplay.css
+++ b/src/components/GeneralStatsDisplay/GeneralStatsDisplay.css
@@ -1,6 +1,5 @@
-@import url('//fonts.googleapis.com/css?family=Wallpoet');
 .odometer.odometer-auto-theme,
-.odometer.odometer-theme-digital {
+.odometer.odometer-theme-default {
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
@@ -9,7 +8,7 @@
   position: relative;
 }
 .odometer.odometer-auto-theme .odometer-digit,
-.odometer.odometer-theme-digital .odometer-digit {
+.odometer.odometer-theme-default .odometer-digit {
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
@@ -18,7 +17,7 @@
   position: relative;
 }
 .odometer.odometer-auto-theme .odometer-digit .odometer-digit-spacer,
-.odometer.odometer-theme-digital .odometer-digit .odometer-digit-spacer {
+.odometer.odometer-theme-default .odometer-digit .odometer-digit-spacer {
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
@@ -27,7 +26,7 @@
   visibility: hidden;
 }
 .odometer.odometer-auto-theme .odometer-digit .odometer-digit-inner,
-.odometer.odometer-theme-digital .odometer-digit .odometer-digit-inner {
+.odometer.odometer-theme-default .odometer-digit .odometer-digit-inner {
   text-align: left;
   display: block;
   position: absolute;
@@ -38,29 +37,29 @@
   overflow: hidden;
 }
 .odometer.odometer-auto-theme .odometer-digit .odometer-ribbon,
-.odometer.odometer-theme-digital .odometer-digit .odometer-ribbon {
+.odometer.odometer-theme-default .odometer-digit .odometer-ribbon {
   display: block;
 }
 .odometer.odometer-auto-theme .odometer-digit .odometer-ribbon-inner,
-.odometer.odometer-theme-digital .odometer-digit .odometer-ribbon-inner {
+.odometer.odometer-theme-default .odometer-digit .odometer-ribbon-inner {
   display: block;
   -webkit-backface-visibility: hidden;
 }
 .odometer.odometer-auto-theme .odometer-digit .odometer-value,
-.odometer.odometer-theme-digital .odometer-digit .odometer-value {
+.odometer.odometer-theme-default .odometer-digit .odometer-value {
   display: block;
   -webkit-transform: translateZ(0);
 }
 .odometer.odometer-auto-theme
   .odometer-digit
   .odometer-value.odometer-last-value,
-.odometer.odometer-theme-digital
+.odometer.odometer-theme-default
   .odometer-digit
   .odometer-value.odometer-last-value {
   position: absolute;
 }
 .odometer.odometer-auto-theme.odometer-animating-up .odometer-ribbon-inner,
-.odometer.odometer-theme-digital.odometer-animating-up .odometer-ribbon-inner {
+.odometer.odometer-theme-default.odometer-animating-up .odometer-ribbon-inner {
   -webkit-transition: -webkit-transform 2s;
   -moz-transition: -moz-transform 2s;
   -ms-transition: -ms-transform 2s;
@@ -69,7 +68,7 @@
 }
 .odometer.odometer-auto-theme.odometer-animating-up.odometer-animating
   .odometer-ribbon-inner,
-.odometer.odometer-theme-digital.odometer-animating-up.odometer-animating
+.odometer.odometer-theme-default.odometer-animating-up.odometer-animating
   .odometer-ribbon-inner {
   -webkit-transform: translateY(-100%);
   -moz-transform: translateY(-100%);
@@ -78,7 +77,7 @@
   transform: translateY(-100%);
 }
 .odometer.odometer-auto-theme.odometer-animating-down .odometer-ribbon-inner,
-.odometer.odometer-theme-digital.odometer-animating-down
+.odometer.odometer-theme-default.odometer-animating-down
   .odometer-ribbon-inner {
   -webkit-transform: translateY(-100%);
   -moz-transform: translateY(-100%);
@@ -88,7 +87,7 @@
 }
 .odometer.odometer-auto-theme.odometer-animating-down.odometer-animating
   .odometer-ribbon-inner,
-.odometer.odometer-theme-digital.odometer-animating-down.odometer-animating
+.odometer.odometer-theme-default.odometer-animating-down.odometer-animating
   .odometer-ribbon-inner {
   -webkit-transition: -webkit-transform 2s;
   -moz-transition: -moz-transform 2s;
@@ -103,16 +102,15 @@
 }
 
 .odometer.odometer-auto-theme,
-.odometer.odometer-theme-digital {
-  background: black;
-  font-family: 'Wallpoet', monospace;
-  padding: 0 0.2em;
+.odometer.odometer-theme-default {
   line-height: 1.1em;
+  font-size: 1.5rem;
+  font-weight: 600;
   color: white;
 }
-.odometer.odometer-auto-theme .odometer-digit + .odometer-digit,
-.odometer.odometer-theme-digital .odometer-digit + .odometer-digit {
-  margin-left: 0.1em;
+.odometer.odometer-auto-theme .odometer-value,
+.odometer.odometer-theme-default .odometer-value {
+  text-align: center;
 }
 
 .general-stats {
