--- a/src/components/Graph/Graph.css
+++ b/src/components/Graph/Graph.css
@@ -3,4 +3,7 @@
   height: 50%;
   background: var(--light-grey);
   border-radius: var(--border-radius);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
