--- a/src/components/LineChart/LineChart.css
+++ b/src/components/LineChart/LineChart.css
@@ -4,10 +4,19 @@
   background: var(--light-grey);
   border-radius: var(--border-radius);
   padding: 0.5rem;
+  padding-top: 0;
+}
+
+.chart-title {
+  height: 8%;
 }
 
 .chart-container {
   width: 100%;
-  height: 100%;
+  height: 92%;
   overflow: hidden;
+}
+
+.chart-label {
+  filter: brightness(1.8);
 }
