--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ body {
   color: var(--main-color);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: black;
 }
 
 a {
@@ -38,5 +39,15 @@ ul {
   list-style: none;
 }
 
-@media only screen and (max-width: 600px) {
+::-webkit-scrollbar {
+  width: 0.45rem;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--bright-grey-opac);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--bright-grey);
+  border-radius: 6px;
 }
