--- a/src/components/GeneralStatsDisplay/GeneralStatsDisplay.css
+++ b/src/components/GeneralStatsDisplay/GeneralStatsDisplay.css
@@ -138,3 +138,25 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+@media screen and (max-width: 1000px) {
+  .general-stats {
+    width: 100%;
+    height: 70%;
+    background: transparent;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .general-stats-title {
+    font-size: 2rem;
+  }
+
+  .general-stats {
+    height: 60%;
+  }
+
+  .general-stats-display {
+    width: 280px;
+  }
+}
