--- a/src/components/SVGMap/SVGMap.css
+++ b/src/components/SVGMap/SVGMap.css
@@ -1,6 +1,6 @@
 .svg-map-container {
   background: var(--light-grey);
-  width: 620px;
+  width: 47%; /*620px*/
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -34,6 +34,9 @@
   fill: var(--hover-yellow);
   outline: none;
 }
+.svg-map__location:active {
+  outline: none;
+}
 
 .specific-stats-container {
   width: 100%;
@@ -46,4 +49,11 @@
   grid-template-columns: calc(50% - 0.6rem) calc(50% - 0.6rem);
   grid-template-rows: calc(50% - 0.3rem) calc(50% - 0.3rem);
   justify-content: center;
+}
+
+@media screen and (max-width: 1350px) {
+  .svg-map-container {
+    width: 100%;
+    margin: 0%;
+  }
 }
